# Nexflow

./: .env.example  .gitignore  CLAUDE.md  LICENSE  README.md  SETUP.md  STARTUP_STEPS.md  common_issues.md  connections.md  package.json  plan.md  plan_advanced.md  pnpm-lock.yaml  tsconfig.base.json
.claude/: settings.local.json
apps/runtime/: .env.example  README.md  db.py  main.py  package.json  pyproject.toml  schema.py
apps/runtime/connectors/: __init__.py  airtable.py  asana.py  base.py  calendar.py  docs.py  drive.py  github.py  gmail.py  hubspot.py  notion.py  outlook.py  rate_limit.py  sheets.py  slack.py  typeform.py
apps/runtime/engine/: executor.py
apps/web/: .env.example  .env.local.example  middleware.ts  next.config.mjs  next.config.ts  package.json  tailwind.config.ts  tsconfig.tsbuildinfo  vitest.config.ts
apps/web/app/: error.tsx  global-error.tsx  globals.css  layout.tsx  not-found.tsx  page.tsx
apps/web/app/(app)/: layout.tsx
apps/web/app/(editor)/: layout.tsx
apps/web/components/: sidebar.tsx  theme-picker.tsx  theme-provider.tsx
apps/web/components/dashboard/: genesis-prompt.tsx
apps/web/components/edges/: ControlFlowEdge.tsx  DataFlowEdge.tsx  EventEdge.tsx
apps/web/components/editor/: EditorShell.tsx  EditorToolbar.tsx  (+2 more)
apps/web/lib/: api.ts  email.ts  inngest.ts  oauth-token.ts  server-fetch.ts  templates.ts  vault.ts
supabase/: config.toml
supabase/migrations/: 20240001_init.sql  20240002_vault_helpers.sql  20240003_phase4.sql  20240004_marketplace.sql  20240005_approval_notified.sql  20240006_cost_token_telemetry.sql
(+119 files in other folders)
